# zerochain-wallet-desktop

./: .gitignore  README.md  package.json  tslint.json  webpack.config.js
src/: index.html
src/css/: address_table.scss  bootstrap_variables.scss  dashboard.scss  index.scss  recovery.scss  settings.scss  sidebar.scss
src/main/: index.js
src/renderer/: index.tsx  zface_helper.ts
src/renderer/components/: dashboard.tsx  recieve.tsx  send.tsx
src/renderer/components/accounts/: account_select.tsx  account_table.tsx
src/renderer/components/dashboard/: accounts.tsx  address_table.tsx  index.tsx  summary_card.tsx
src/renderer/components/recieve/: index.tsx  new_account.tsx
src/renderer/components/send/: current_status.tsx  form.tsx  index.tsx
src/renderer/components/settings/: backup.tsx  create_wallet.tsx  index.tsx  menu.tsx  recovery.tsx
zerochain/: README.md
zerochain/native/: Cargo.toml
zerochain/native/src/: helper.rs  lib.rs
